# ezw

./: Cargo.toml  README.md  build.yaml  rust-toolchain.toml  rustfmt.toml
src/: main.rs
src/config/: build.rs  mod.rs
src/ezw/: mod.rs
src/template/: build.rs  mod.rs
templates/: index.js
templates/api/: hello.js
